--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "secret-learn"
-version = "0.2.0"
+version = "0.2.2"
 description = "Privacy-preserving machine learning with SecretFlow - 573 implementations (191 algorithms × 3 modes: FL/SS/SL) with JAX acceleration"
 readme = "README.md"
 authors = [
@@ -60,23 +60,10 @@ jax-sklearn = ["jax-sklearn>=0.1.0"]
 secretflow = ["secretflow>=0.7.7b0"]
 jax-cpu = ["jax[cpu]>=0.4.20"]
 jax-gpu = ["jax[gpu]>=0.4.20"]
-benchmark = ["matplotlib>=3.5.0", "pandas>=1.4.0", "memory_profiler>=0.57.0"]
-docs = [
+benchmark = [
     "matplotlib>=3.5.0",
-    "scikit-image>=0.19.0",
     "pandas>=1.4.0",
-    "seaborn>=0.9.0",
-    "memory_profiler>=0.57.0",
-    "sphinx>=7.3.7",
-    "sphinx-copybutton>=0.5.2",
-    "sphinx-gallery>=0.17.1",
-    "numpydoc>=1.2.0",
-    "Pillow>=8.4.0",
-    "pooch>=1.6.0",
-    "sphinx-prompt>=1.4.0",
-    "sphinxext-opengraph>=0.9.1",
-    "plotly>=5.14.0",
-    "polars>=0.20.30",
+    "memory_profiler>=0.57.0"
 ]
 examples = [
     "matplotlib>=3.5.0",
@@ -87,20 +74,9 @@ examples = [
     "plotly>=5.14.0",
 ]
 tests = [
-    "matplotlib>=3.5.0",
-    "scikit-image>=0.19.0",
-    "pandas>=1.4.0",
     "pytest>=7.1.2",
     "pytest-cov>=2.9.0",
-    "ruff>=0.11.7",
-    "mypy>=1.15",
-    "pyamg>=4.2.1",
-    "polars>=0.20.30",
-    "pyarrow>=12.0.0",
-    "numpydoc>=1.2.0",
-    "pooch>=1.6.0",
 ]
-maintenance = ["conda-lock==3.0.1"]
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
@@ -113,17 +89,19 @@ packages = {find = {where = ["."], include = ["secretlearn*"]}}
 secretlearn = ["**/*.py"]
 
 [tool.pytest.ini_options]
-doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
-testpaths = "secretlearn"
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
 addopts = [
     "--disable-pytest-warnings",
     "--color=yes",
-    "--import-mode=importlib",
+    "--verbose",
 ]
 
 [tool.ruff]
 line-length = 88
-exclude=[
+exclude = [
     ".eggs",
     ".git",
     ".mypy_cache",
@@ -131,350 +109,19 @@ exclude=[
     "__pycache__",
     "build",
     "dist",
+    "*.egg-info",
 ]
 
 [tool.ruff.lint]
-# This enables us to use CPY001: copyright header check
-preview = true
-# This enables us to use the explicit preview rules that we want only
-explicit-preview-rules = true
-# all rules can be found here: https://docs.astral.sh/ruff/rules/
-extend-select = ["E501", "W", "I", "CPY001", "PGH", "RUF"]
-ignore=[
-    # do not assign a lambda expression, use a def
-    "E731",
-    # do not use variables named 'l', 'O', or 'I'
-    "E741",
-    # E721 gives many false positives.
-    # Use `is` and `is not` for type comparisons, or `isinstance()` for
-    # isinstance checks
-    "E721",
-    # We don't care much about F841.
-    # Local variable ... is assigned to but never used
-    "F841",
-    # some RUF rules trigger too many changes
-    "RUF002",
-    "RUF003",
-    "RUF005",
-    "RUF012",
-    "RUF015",
-    "RUF021",
-    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
-    "W191",
-    "E111",
-    "E114",
-    "E117",
-    "D206",
-    "D300",
-    "Q000",
-    "Q001",
-    "Q002",
-    "Q003",
-    "COM812",
-    "COM819",
+select = ["E", "F", "W", "I"]
+ignore = [
+    "E731",  # do not assign a lambda expression, use a def
+    "E741",  # do not use variables named 'l', 'O', or 'I'
+    "E721",  # use isinstance() for type comparisons
+    "F841",  # local variable assigned but never used
 ]
-
-[tool.ruff.lint.flake8-copyright]
-notice-rgx = "\\#\\ Authors:\\ The\\ scikit\\-learn\\ developers\\\r?\\\n\\#\\ SPDX\\-License\\-Identifier:\\ BSD\\-3\\-Clause"
 
 [tool.ruff.lint.per-file-ignores]
-# It's fine not to put the import at the top of the file in the examples
-# folder.
-"examples/*"=["E402"]
-"doc/conf.py"=["E402"]
-"**/tests/*"=["CPY001"]
-"asv_benchmarks/*"=["CPY001"]
-"benchmarks/*"=["CPY001"]
-"doc/*"=["CPY001"]
-"build_tools/*"=["CPY001"]
-"secretlearn/_build_utils/*"=["CPY001"]
-"maint_tools/*"=["CPY001"]
-".spin/*"=["CPY001"]
-".github/*"=["CPY001"]
-# __doc__ is too long (>4096 chars) and therefore false positive on copyright check
-"examples/model_selection/plot_precision_recall.py"=["CPY001"]
-"examples/svm/plot_rbf_parameters.py"=["CPY001"]
-# __all__ has un-imported names
-"secretlearn/__init__.py"=["F822"]
-"secretlearn/utils/_metadata_requests.py"=["CPY001"]
-
-[tool.mypy]
-ignore_missing_imports = true
-allow_redefinition = true
-exclude = "^secretlearn/externals"
-
-[[tool.mypy.overrides]]
-module = ["joblib.*"]
-follow_imports = "skip"
-
-[tool.cython-lint]
-# Ignore the same error codes as ruff
-# + E501 (line too long) because keeping it < 88 in cython
-# often makes code less readable.
-ignore = [
-    # multiple spaces/tab after comma
-    'E24',
-    # line too long
-    'E501',
-    # do not assign a lambda expression, use a def
-    'E731',
-    # do not use variables named 'l', 'O', or 'I'
-    'E741',
-    # line break before binary operator
-    'W503',
-    # line break after binary operator
-    'W504',
-]
-# Exclude files are generated from tempita templates
-exclude= []
-
-
-[tool.check-sdist]
-# These settings should match .gitattributes
-sdist-only = []
-git-only = [".*", "azure-pipelines.yml", "benchmarks", "build_tools", "maint_tools"]
-default-ignore = false
-
-[tool.spin]
-package = "secretlearn"  # name of your package
-
-[tool.spin.commands]
-"Build" = [
-  "spin.cmds.pip.install",
-  "spin.cmds.meson.test",
-  ".spin/cmds.py:clean",
-]
-"Documentation" = [
-  "spin.cmds.meson.docs"
-]
-
-[tool.changelog-bot]
-    [tool.changelog-bot.towncrier_changelog]
-        enabled = true
-        verify_pr_number = true
-        changelog_noop_label = "No Changelog Needed"
-        whatsnew_pattern = 'doc/whatsnew/upcoming_changes/[^/]+/\d+\.[^.]+\.rst'
-
-[tool.codespell]
-skip = ["./.git", "*.svg", "./.mypy_cache", "./secretlearn/feature_extraction/_stop_words.py", "./secretlearn/feature_extraction/tests/test_text.py", "./build_tools/wheels/LICENSE_windows.txt", "./doc/_build", "./doc/auto_examples", "./doc/modules/generated"]
-ignore-words = "build_tools/codespell_ignore_words.txt"
-
-[tool.towncrier]
-    package = "secretlearn"
-    filename = "doc/whats_new/v1.7.rst"
-    single_file = true
-    directory = "doc/whats_new/upcoming_changes"
-    issue_format = ":pr:`{issue}`"
-    template = "doc/whats_new/upcoming_changes/towncrier_template.rst.jinja2"
-    all_bullets = false
-
-    [[tool.towncrier.type]]
-        directory = "major-feature"
-        name = "|MajorFeature|"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "feature"
-        name = "|Feature|"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "efficiency"
-        name = "|Efficiency|"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "enhancement"
-        name = "|Enhancement|"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "fix"
-        name = "|Fix|"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "api"
-        name = "|API|"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "other"
-        name = ""
-        showcontent = true
-
-    [[tool.towncrier.section]]
-        name = "Security"
-        path = "security"
-
-    [[tool.towncrier.section]]
-        name = "Changed models"
-        path = "changed-models"
-
-    [[tool.towncrier.section]]
-        name = "Changes impacting many modules"
-        path = "many-modules"
-
-    [[tool.towncrier.section]]
-        name = "Support for Array API"
-        path = "array-api"
-
-    [[tool.towncrier.section]]
-        name = "Metadata routing"
-        path = "metadata-routing"
-
-    [[tool.towncrier.section]]
-        name = "custom-top-level"
-        path = "custom-top-level"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.base`"
-        path = "secretlearn.base"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.calibration`"
-        path = "secretlearn.calibration"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.cluster`"
-        path = "secretlearn.cluster"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.compose`"
-        path = "secretlearn.compose"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.covariance`"
-        path = "secretlearn.covariance"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.cross_decomposition`"
-        path = "secretlearn.cross_decomposition"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.datasets`"
-        path = "secretlearn.datasets"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.decomposition`"
-        path = "secretlearn.decomposition"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.discriminant_analysis`"
-        path = "secretlearn.discriminant_analysis"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.dummy`"
-        path = "secretlearn.dummy"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.ensemble`"
-        path = "secretlearn.ensemble"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.exceptions`"
-        path = "secretlearn.exceptions"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.feature_extraction`"
-        path = "secretlearn.feature_extraction"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.feature_selection`"
-        path = "secretlearn.feature_selection"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.frozen`"
-        path = "secretlearn.frozen"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.gaussian_process`"
-        path = "secretlearn.gaussian_process"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.impute`"
-        path = "secretlearn.impute"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.inspection`"
-        path = "secretlearn.inspection"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.isotonic`"
-        path = "secretlearn.isotonic"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.kernel_approximation`"
-        path = "secretlearn.kernel_approximation"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.kernel_ridge`"
-        path = "secretlearn.kernel_ridge"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.linear_model`"
-        path = "secretlearn.linear_model"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.manifold`"
-        path = "secretlearn.manifold"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.metrics`"
-        path = "secretlearn.metrics"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.mixture`"
-        path = "secretlearn.mixture"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.model_selection`"
-        path = "secretlearn.model_selection"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.multiclass`"
-        path = "secretlearn.multiclass"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.multioutput`"
-        path = "secretlearn.multioutput"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.naive_bayes`"
-        path = "secretlearn.naive_bayes"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.neighbors`"
-        path = "secretlearn.neighbors"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.neural_network`"
-        path = "secretlearn.neural_network"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.pipeline`"
-        path = "secretlearn.pipeline"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.preprocessing`"
-        path = "secretlearn.preprocessing"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.random_projection`"
-        path = "secretlearn.random_projection"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.semi_supervised`"
-        path = "secretlearn.semi_supervised"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.svm`"
-        path = "secretlearn.svm"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.tree`"
-        path = "secretlearn.tree"
-
-    [[tool.towncrier.section]]
-        name = ":mod:`secretlearn.utils`"
-        path = "secretlearn.utils"
+"examples/*" = ["E402"]  # imports not at top
+"tests/*" = ["E402"]
+"benchmarks/*" = ["E402"]
