--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,7 +6,7 @@ body:
 - type: markdown
   attributes:
     value: >
-      #### If you want to propose a new algorithm, please refer first to the [secret-learn inclusion criterion](https://secret-learn.org/stable/faq.html#what-are-the-inclusion-criteria-for-new-algorithms).
+      #### If you want to propose a new algorithm, please refer first to the [Secret-Learn inclusion criterion](https://Secret-Learn.org/stable/faq.html#what-are-the-inclusion-criteria-for-new-algorithms).
 - type: textarea
   attributes:
     label: Describe the workflow you want to enable
