--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,4 +18,4 @@ updates:
       - "Build / CI"
       - "dependencies"
     reviewers:
-      - "secret-learn/core-devs"
+      - "Secret-Learn/core-devs"
