--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -33,8 +33,8 @@ jobs:
         python -m wheelhouse_uploader fetch \
           --version $XLEARN_VERSION \
           --local-folder dist/ \
-          secret-learn \
-          https://pypi.anaconda.org/secret-learn-wheels-staging/simple/secret-learn/
+          Secret-Learn \
+          https://pypi.anaconda.org/Secret-Learn-wheels-staging/simple/Secret-Learn/
     - name: Check dist has the correct number of artifacts
       run: |
         python build_tools/github/check_wheels.py
