refactor: Update benchmarks to use 'xlearn' instead of 'secretlearn'
- Replaced all instances of 'secretlearn' with 'xlearn' in benchmark scripts to reflect the new library naming.
- Ensured consistency across various benchmark files, including updates to imports and function calls.
- This change enhances clarity and aligns the codebase with the updated library structure.

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -19,7 +19,7 @@ body:
   attributes:
     label: Steps/Code to Reproduce
     description: |
-      Please add a [minimal code example](https://Secret-Learn.org/dev/developers/minimal_reproducer.html) that can reproduce the error when running it. Be as succinct as possible, **do not depend on external data files**: instead you can generate synthetic data using `numpy.random`, [secretlearn.datasets.make_regression](https://Secret-Learn.org/stable/modules/generated/secretlearn.datasets.make_regression.html), [secretlearn.datasets.make_classification](https://Secret-Learn.org/stable/modules/generated/secretlearn.datasets.make_classification.html) or a few lines of Python code. Example:
+      Please add a [minimal code example](https://Secret-Learn.org/dev/developers/minimal_reproducer.html) that can reproduce the error when running it. Be as succinct as possible, **do not depend on external data files**: instead you can generate synthetic data using `numpy.random`, [xlearn.datasets.make_regression](https://Secret-Learn.org/stable/modules/generated/xlearn.datasets.make_regression.html), [xlearn.datasets.make_classification](https://Secret-Learn.org/stable/modules/generated/xlearn.datasets.make_classification.html) or a few lines of Python code. Example:
 
       ```python
       from secretlearn.feature_extraction.text import CountVectorizer
